styles/sytles.css
/* Imports */
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Raleway:wght@100;200;300;400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;400;500;600;700&display=swap");

/* Unviersal Selector for all elements */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.background_blur {
    backdrop-filter: blur(2px);
    background: rgba(255, 255, 255, 0.2);
}

.content_container {
    background-image: url(../images/hoya-leaf.jpg);
    background-position: 0% 40%;
    background-repeat: no-repeat;
    background-size: cover;
}

.down_button_container {
    display: flex;
}

.down_button {
    border-bottom: 3px solid rgba(129, 129, 129, 0.75);
    border-right: 3px solid rgba(129, 129, 129, 0.75);
    display: inline-block;
    height: 15px;
    transform: rotate(45deg);
    transition: border-color 100ms ease-in-out;
    width: 15px;
}

.down_button:hover {
    border-bottom: 3px solid rgba(255, 255, 255, 1);
    border-right: 3px solid rgba(255, 255, 255, 1);
}

.flex_col {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.flex_row {
    align-items: center;
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: center;
}

.footer_container {
    align-items: center;
    background-color: rgb(62, 62, 61);
    display: flex;
    height: 30px;
    justify-content: center;
}

.footer_container p {
    color: rgb(255, 255, 255);
    font-family: "Quicksand", sans-serif;
    font-size: 0.8rem;
}

.image_container {
    margin-top: 10px;
    width: 50%;
}

.image_container img {
    border-radius: 10px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
    height: auto;
    margin: 0 auto;
    width: 100%;
}

.navbar {
    display: flex;
    justify-content: center;
    background-color: rgb(62, 62, 61);
    width: 100%;
}

.navbar ul {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    display: flex;
    justify-content: space-around;
    height: 40px;
    list-style-type: none;
    width: 50%;
}

.navbar ul li {
    font-size: 1rem;
    height: 100%;
    justify-content: center;
    position: relative;
}

.navbar ul li a {
    align-items: center;
    color: rgb(240, 240, 240);
    display: flex;
    font-family: "Quicksand", sans-serif;
    height: 100%;
    justify-content: center;
    text-decoration: none;
    transition: 0.3s;
}

.navbar .submenu {
    background-color: rgb(245, 218, 181, 0.95);
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
    display: none;
    height: auto;
    position: absolute;
    width: 175px;
}

.navbar ul li:hover .submenu {
    display: block;
    animation: opacity-in 300ms ease-in-out forwards;
}

.navbar .submenu a {
    color: rgb(0, 0, 0);
    padding: 5px 0px;
    width: 100%;
}

/*
.navbar ul li ul li a {
    color: rgb(0, 0, 0);
    padding: 5px 0px;
    width: 100%;
}

.main_nav_tile:hover {
    text-shadow: 0px 0px 1.5px rgb(255, 255, 255);
}

.main_nav_tile:after {
    background-color: rgb(255, 255, 255);
    bottom: 0;
    content: "";
    height: 3px;
    margin: 0 auto;
    opacity: 0;
    position: absolute;
    transition: 0.3s;
    width: 50%;
}

.main_nav_tile:hover::after {
    width: 130%;
    opacity: 1;
}

.navbar ul li ul li a:hover {
    animation-duration: 200ms;
    animation-fill-mode: forwards;
    animation-name: bottom-gradual-fade;
    text-shadow: 0px 0px 1px rgb(0, 0, 0);
}

.navbar ul li ul li:last-child a {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}
*/
.text_container {
    background-color: rgb(245, 218, 181);
    border-radius: 10px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
    margin: 10px 0;
    padding: 5px 0;
    text-align: center;
    width: 85%;
}

.text_container * {
    color: rgb(65, 65, 65);
    font-family: "Josefin Slab", serif;
    font-weight: 700;
    padding: 5px 0px;
}

.text_container p {
    font-weight: 600;
    width: 95%;
}

.title_container {
    background-color: rgb(221, 181, 125);
    box-shadow: inset 0px -2px rgba(0, 0, 0, 0.5);
    height: 100px;
    width: 100%;
}

.title_container a {
    color: rgb(65, 65, 65);
    font-family: "Quicksand", sans-serif;
}

.title_container h1 {
    font-size: 4rem;
    text-shadow: 1px 2px 2px rgb(0, 0, 0);
}

/* Animations used */
@keyframes opacity-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes bottom-gradual-glow {
    0% {
        background-color: rgba(255, 255, 255, 0.1);
    }
    50% {
        background-color: rgba(255, 255, 255, 0.2);
    }
    100% {
        background-color: rgba(255, 255, 255, 0.3);
    }
}

@keyframes bottom-gradual-fade {
    0% {
        background-color: rgba(255, 255, 255, 0.05);
    }
    50% {
        background-color: rgba(128, 128, 128, 0.1);
    }
    100% {
        background-color: rgba(128, 128, 128, 0.15);
    }
}

/* Media Controls*/
/* Wide Laptops 
@media (min-width: 1440px) {
    .navbar ul {
        width: 30%;
    }
    .text_container {
        width: 75%;
    }
}
*/
/* Tablets 
@media (max-width: 768px) {
    .image_container {
        width: 85%;
    }
    .navbar ul {
        width: 100%;
    }
    .navbar ul li:hover ul {
        position: fixed;
        left: 0;
        width: 100%;
    }
    .text_container {
        width: 85%;
    }
}
*/
/* Phones 
@media (max-width: 500px) {
    .title_container h1 {
        font-size: 3rem;
    }
    .navbar ul li,
    .navbar ul li ul li {
        font-size: 0.85rem;
    }
}
*/
/* Lower Res Phones
@media (max-width: 300px) {
    .title_container {
        height: 80px;
    }
    .title_container h1 {
        font-size: 2.5rem;
    }
    .navbar ul li,
    .navbar ul li ul li {
        font-size: 0.7rem;
    }
}
*/

